plugins {
    id 'java'
}

group 'com.sanjay900'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.ow2.asm', name: 'asm', version: '7.2-beta'
    compile "com.sparkjava:spark-core:2.9.1"
    compile group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.9.15'
}
jar {
    archiveName = "${rootProject.name}-${rootProject.version}.jar"
    manifest {
        attributes(
                'Agent-Class': 'server.BytecodeServer',
                'Can-Redefine-Classes': 'true',
                'Can-Retransform-Classes': 'true',
                'Can-Set-Native-Method-Prefix': 'true',
                'Implementation-Title': "ClassLogger",
                'Implementation-Version': rootProject.version
        )
    }
}
processTestResources{
    dependsOn jar
}

